# tiralabra-connectfour

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md  viikkoraportti7+8.md
src/: connectfour.py  load_image.py  performance_test.py  performance_testing.py
src/UI/: game_UI.py  menu_UI.py
src/game/: game.py  slot.py
src/gamemodules/: ai.py  game_logic.py  multiplayer_game.py  singleplayer_game.py  slot.py
src/menu/: mainmenu.py
src/tests/: ai_test.py  menu_test.py  multiplayer_game_test.py  singleplayer_game_test.py  slot_test.py
