[tool.poetry]
name = "tiralabra-connectfour"
version = "0.1.0"
description = ""
authors = ["Iida Vilkkinen <iida.vilkkinen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"
pylint = "^2.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
